syntax = "proto3";
package f5.nginx.agent.sdk.events;
option go_package = "github.com/nginx/agent/sdk/v2/proto/events;f5.nginx.agent.sdk.events";

import "gogo.proto";
import "google/protobuf/timestamp.proto";
import "common/common.proto";

message Metadata {
    string Module = 1 [(gogoproto.jsontag) = "module" ];
    string UUID = 2 [(gogoproto.jsontag) = "uuid" ];
    string CorrelationID = 3 [(gogoproto.jsontag) = "correlation_id" ];
    google.protobuf.Timestamp Timestamp = 4 [(gogoproto.jsontag) = "timestamp" ];
    string EventLevel = 5 [(gogoproto.jsontag) = "event_level" ];
    string Type = 6 [(gogoproto.jsontag) = "type" ];
    string Category = 7 [(gogoproto.jsontag) = "category" ];
}

message Event {
    Metadata Metadata = 1 [(gogoproto.jsontag) = "metadata" ];
    oneof data {
        ActivityEvent ActivityEvent = 2 [(gogoproto.jsontag) = "activity_event" ];

        // While generating the SecurityViolationEvent, the Metadata for a SecurityViolationEvent
        // would look as shown below:
        // *   Module           = Agent
        // *   UUID             = A UUID generated by the Agent for the EventReport
        // *   CorrelationID    = The UUID will be used as the Correlation ID to track the EventReport
        // *   Timestamp        = The timestamp when NGINX Agent received the violation event
        // *   EventLevel       = All the SecurityViolationEvent would be generated at an ERROR_EVENT_LEVEL ("ERROR") level
        //                        In future, the levels might be dynamically chosen based on Request Outcome of SecurityViolationEvent
        // *   Type             = NGINX_EVENT_TYPE ("Nginx")
        // *   Category         = APP_PROTECT_CATEGORY ("AppProtect")
        // 
        SecurityViolationEvent SecurityViolationEvent = 3 [(gogoproto.jsontag) = "security_violation_event" ];
    }
}

message EventReport {
    repeated Event Events = 1 [(gogoproto.jsontag) = "events" ];
}

message ActivityEvent {
    string Message = 1 [(gogoproto.jsontag) = "message" ];
    repeated f5.nginx.agent.sdk.common.Dimension Dimensions = 2 [(gogoproto.jsontag) = "dimensions" ];
}

// SecurityViolationEvent represents a Security Violation that is emitted by the Agent
message SecurityViolationEvent {
    string DateTime = 1 [(gogoproto.jsontag) = "date_time" ];
    string PolicyName = 2 [(gogoproto.jsontag) = "policy_name" ];
    string SupportID = 3 [(gogoproto.jsontag) = "support_id" ];
  
    string Outcome = 4 [(gogoproto.jsontag) = "outcome" ];
    string OutcomeReason = 5 [(gogoproto.jsontag) = "outcome_reason" ];
    string BlockingExceptionReason = 6 [(gogoproto.jsontag) = "blocking_exception_reason" ];
  
    string Method = 7 [(gogoproto.jsontag) = "method" ];
    string Protocol = 8 [(gogoproto.jsontag) = "protocol" ];
    string XForwardedForHeaderValue = 9 [(gogoproto.jsontag) = "xff_header_value" ];
  
    string URI = 10 [(gogoproto.jsontag) = "uri" ];
    string Request = 11 [(gogoproto.jsontag) = "request" ];
    string IsTruncated = 12 [(gogoproto.jsontag) = "is_truncated" ];
    string RequestStatus = 13 [(gogoproto.jsontag) = "request_status" ];
    string ResponseCode = 14 [(gogoproto.jsontag) = "response_code" ];
  
    string GeoIP = 15 [(gogoproto.jsontag) = "geo_ip" ];
    string Host = 16 [(gogoproto.jsontag) = "host" ];
    string UnitHostname = 17 [(gogoproto.jsontag) = "unit_hostname" ];
    string SourceHost = 18 [(gogoproto.jsontag) = "source_host" ];
    string VSName = 19 [(gogoproto.jsontag) = "vs_name" ];
    string IPClient = 20 [(gogoproto.jsontag) = "ip_client" ];
    string DestinationPort = 21 [(gogoproto.jsontag) = "destination_port" ];
    string SourcePort = 22 [(gogoproto.jsontag) = "source_port" ];
  
    string Violations = 23 [(gogoproto.jsontag) = "violations" ];
    string SubViolations = 24 [(gogoproto.jsontag) = "sub_violations" ];
    string ViolationRating = 25 [(gogoproto.jsontag) = "violation_rating" ];
  
    string SigID = 26 [(gogoproto.jsontag) = "sig_id" ];
    string SigNames = 27 [(gogoproto.jsontag) = "sig_names" ];
    string SigSetNames = 28 [(gogoproto.jsontag) = "sig_set_names" ];
    string SigCVEs = 29 [(gogoproto.jsontag) = "sig_cves" ];
  
    string ClientClass = 30 [(gogoproto.jsontag) = "client_class" ];
    string ClientApplication = 31 [(gogoproto.jsontag) = "client_application" ];
    string ClientApplicationVersion = 32 [(gogoproto.jsontag) = "client_application_version" ];
  
    string Severity = 33 [(gogoproto.jsontag) = "severity" ];
    // NOTE: Severity Label might be deprecated if we have no use for it
    string SeverityLabel = 34 [(gogoproto.jsontag) = "severity_label" ];
    string Priority = 35 [(gogoproto.jsontag) = "priority" ];
  
    string ThreatCampaignNames = 36 [(gogoproto.jsontag) = "threat_campaign_names" ];
  
    string BotAnomalies = 37 [(gogoproto.jsontag) = "bot_anomalies" ];
    string BotCategory = 38 [(gogoproto.jsontag) = "bot_category" ];
    string EnforcedBotAnomalies = 39 [(gogoproto.jsontag) = "enforced_bot_anomalies" ];
    string BotSignatureName = 40 [(gogoproto.jsontag) = "bot_signature_name" ];
  
    string ViolationContexts = 41 [(gogoproto.jsontag) = "violation_contexts" ];
    repeated ViolationData ViolationsData = 42 [(gogoproto.jsontag) = "violations_data" ];
}
  
message SignatureData {
    string ID = 1 [(gogoproto.jsontag) = "sig_data_id" ];
    string Buffer = 2 [(gogoproto.jsontag) = "sig_data_buffer" ];
    string Offset = 3 [(gogoproto.jsontag) = "sig_data_offset" ];
    string Length = 4 [(gogoproto.jsontag) = "sig_data_length" ];
}
  
message ViolationData {
    string Name = 1 [(gogoproto.jsontag) = "violation_data_name" ];
    string Context = 2 [(gogoproto.jsontag) = "violation_data_context" ];
    string ParameterName = 3 [(gogoproto.jsontag) = "violation_data_param_name" ];
    string ParamaterValue = 4 [(gogoproto.jsontag) = "violation_data_param_value" ];
    repeated SignatureData Signatures = 5 [(gogoproto.jsontag) = "violation_data_signatures" ];
}